# EuroMedEval

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NEW_DATASET_GUIDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: dataset-proposal.md  framework-change.md
.github/workflows/: pages.yml
docs/: index.html  methodology.md  site.css  site.js
docs/datasets/: albanian.md  belgian.md  european_seed_set.md  french.md  german.md  greek.md  italian.md  norwegian.md  polish.md  spanish.md  swedish.md
docs/leaderboards/: european.md
docs/sourcing/: portugal.md  romania.md
src/euromedeval/: __init__.py  __main__.py  benchmarker.py  builders.py  registry.py  schemas.py  source_parsers.py  tasks.py
src/euromedeval/dataset_configs/: __init__.py  albanian.py  belgian.py  french.py  german.py  greek.py  italian.py  norwegian.py  polish.py  spanish.py  swedish.py
src/scripts/: create_casimedicos_squad.py  create_doatap_med_el.py  create_entrance_al_chemistry_sq.py  create_entrance_al_sq.py  create_entrance_al_systems_sq.py  create_entrance_be_nl.py  create_french_medmcqa.py  create_head_qa_es.py  create_impp_sample_de.py  create_ldek_pl.py  create_lek_pl.py  create_medexpqa_fr.py  create_medexpqa_it.py  create_mediqal_fr.py  create_mediqal_oeq_fr.py  create_miur_clinica_it.py  create_miur_preclinica_it.py  create_nor_medqa.py  create_pes_pl.py  create_pubmedqa_sv.py  create_se_em_sv.py  create_se_gp_sv.py  create_smdt_sv.py  create_test_medicina.py
tests/: test_benchmarker.py  test_registry.py
